# wonderwall

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
tests/: conftest.py  helpers.py  test_dns.py  test_http_proxy.py  test_https_proxy.py  test_integration.py  test_main.py  test_proxy.py  test_static.py  test_wonderwall.py
wonderwall/: __main__.py  dns.py  http_proxy.py  https_proxy.py  proxy.py  static.py
