[project]
name = "wonderwall"
version = "0.1.0"
description = ""
authors = [
    {name = "Stephen Jackson",email = "me@sjcksn.com"}
]
requires-python = ">=3.13"
dependencies = [
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
