[project]
name = "wonderwall"
version = "0.1.0"
description = ""
authors = [
    {name = "Stephen Jackson",email = "me@sjcksn.com"}
]
requires-python = ">=3.13"
dependencies = [
    "nserver (>=3.1.0,<4.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=6.0,<7.0)",
    "requests (>=2.32,<3.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["wonderwall"]
omit = ["wonderwall/__pycache__/*"]

[tool.coverage.report]
show_missing = true
